# Geoflip

./: .env.example  .gitignore  CLAUDE.md  GeoFlip_Board_Mode_Plan.md  GeoFlip_Final_Implementation_Guide.md  README.md  codegraph.bat  pyproject.toml
.claude/: settings.local.json
app/: config.py  models.py  state.py  web.py
app/data/: state.json
app/game/: rules.py
app/map/: render.py
app/services/: geometry.py  nominatim.py  osrm.py  overpass.py  tls.py
app/static/: app.css
app/templates/: index.html  setup.html
data/: state.json
tests/: test_integration.py  test_map_render.py  test_models.py  test_nominatim.py  test_osrm.py  test_overpass.py  test_rules.py  test_state.py  test_web.py
tests/fixtures/: __init__.py  fake_nominatim_results.json
